assets/styles/_spacing.scss
& {
	--logo--height--scaled: calc(var(--logo--height) * var(--logo--scale, 1));

	--scroll--scale:           calc(1 - (1 - var(--logo--scale)) * var(--logo--scroll));
	--scroll--scale--duration: 50ms;

	--header--height: calc(
		var(--logo--height) +
		var(--tagline--height) +
		var(--margin--vertical) * 3
	);

	--header--height--scrolled: calc(
			var(--logo--height--scaled) +
			var(--tagline--height) +
			var(--margin--vertical) * 3
		);

	--header--height--scrolled--footer: calc(
			var(--tagline--height) +
			var(--links--height) +
			var(--margin--vertical) * 3
		);

	// The distance from the initial, centered logo until it is “stuck”.
	--header--scroll: calc((var(--vh--initial, 100vh) - var(--header--height)) / 2);



	--anchor--offset: var(--margin--vertical);

	--anchor--offset--section: calc(var(--anchor--offset) + var(--header--height--scrolled));
	--anchor--offset--about:   calc(var(--anchor--offset) + var(--header--height--scrolled--footer) - 0.2rem); // Hide overshoots.



	--section--spacing: calc(var(--margin--vertical) * 4);
	--section--overlap: 1.2rem; // Through the header on the next section.

	--section--height: calc(
		var(--vh--initial, 100vh) -
		var(--header--height--scrolled) -
		var(--section--spacing) -
		var(--anchor--offset) -
		var(--section--overlap)
	);

	--footer--spacing: calc(var(--section--spacing) * 2);



	@include landscape {
		--anchor--offset--section: var(--margin--vertical);
		--anchor--offset--about:   calc(var(--margin--vertical) - 0.2rem); // Hide overshoots.

		--section--overlap: calc(var(--tagline--height) + var(--margin--vertical)); // Tagline stuck to bottom.

		--section--height: calc(
			var(--vh--initial, 100vh) -
			var(--section--spacing) -
			var(--anchor--offset) -
			var(--section--overlap)
		);

		--footer--spacing: calc(var(--inner-height, 100vh) - var(--tagline--height) - var(--colophon--height) - var(--margin) - var(--page--inset--bottom));
	}

	@include breakpoint(768) {
		--scroll--offset: calc(var(--tagline--height) + var(--margin--vertical) + var(--links--height));

		--footer--spacing: calc(var(--inner-height, 100vh) - var(--colophon--height) - var(--margin--vertical) - var(--outro--height, var(--scroll--offset)));
	}
}

